--- a/vector/src/main/res/values-fr/strings.xml
+++ b/vector/src/main/res/values-fr/strings.xml
@@ -73,7 +73,7 @@ Cliquez sur exporter pour les sauvegarder avant de vous déconnecter.</string>
     <string name="local_address_book_header">Carnet d\'adresses local</string>
     <string name="matrix_only_filter">Contacts Matrix uniquement</string>
     <string name="no_conversation_placeholder">Aucune discussion</string>
-    <string name="no_contact_access_placeholder">Vous n\'avez pas autorisé Riot à accéder à vos contacts locaux</string>
+    <string name="no_contact_access_placeholder">Vous n\'avez pas autorisé Wiresafe à accéder à vos contacts locaux</string>
     <string name="no_result_placeholder">Aucun résultat</string>
 
     <string name="rooms_header">Salons</string>
@@ -523,26 +523,26 @@ Veuillez nous excuser pour ce désagrément.</string>
     <string name="call_error_user_not_responding">Le correspondant n\'a pas décroché.</string>
     <string name="media_picker_both_capture_title">Prendre une photo ou une vidéo</string>
     <string name="permissions_rationale_popup_title">Information</string>
-    <string name="permissions_rationale_msg_storage">Riot a besoin d\'accéder à vos photos et vidéos pour envoyer et enregistrer des pièces jointes.
+    <string name="permissions_rationale_msg_storage">Wiresafe a besoin d\'accéder à vos photos et vidéos pour envoyer et enregistrer des pièces jointes.
 
 Veuillez autoriser l\'accès dans la prochaine fenêtre contextuelle pour pouvoir envoyer des fichiers depuis votre téléphone.</string>
-    <string name="permissions_rationale_msg_camera">Riot a besoin d\'accéder à votre appareil photo pour prendre des photos et passer des appels vidéo.</string>
+    <string name="permissions_rationale_msg_camera">Wiresafe a besoin d\'accéder à votre appareil photo pour prendre des photos et passer des appels vidéo.</string>
     <string name="permissions_rationale_msg_camera_explanation">
 
 Veuillez autoriser l\'accès dans la prochaine fenêtre contextuelle pour pouvoir effectuer l\'appel.</string>
-    <string name="permissions_rationale_msg_record_audio">Riot a besoin d\'accéder à votre microphone pour passer des appels audio.</string>
+    <string name="permissions_rationale_msg_record_audio">Wiresafe a besoin d\'accéder à votre microphone pour passer des appels audio.</string>
     <string name="permissions_rationale_msg_record_audio_explanation">
 
 Veuillez autoriser l\'accès dans la prochaine fenêtre contextuelle pour pouvoir effectuer l\'appel.</string>
-    <string name="permissions_rationale_msg_camera_and_audio">Riot a besoin d\'accéder à votre appareil photo et à votre microphone pour passer des appels vidéo.
+    <string name="permissions_rationale_msg_camera_and_audio">Wiresafe a besoin d\'accéder à votre appareil photo et à votre microphone pour passer des appels vidéo.
 
 Veuillez autoriser l\'accès dans les prochaines fenêtres contextuelles pour pouvoir effectuer l\'appel.</string>
-    <string name="permissions_rationale_msg_contacts">Riot a besoin d\'accéder aux contacts de votre carnet d\'adresses pour trouver d\'autres utilisateurs de Matrix avec leur numéro de téléphone et leur adresse e-mail.
+    <string name="permissions_rationale_msg_contacts">Wiresafe a besoin d\'accéder aux contacts de votre carnet d\'adresses pour trouver d\'autres utilisateurs de Matrix avec leur numéro de téléphone et leur adresse e-mail.
 
-Veuillez autoriser l\'accès dans la prochaine fenêtre contextuelle pour découvrir les utilisateurs du carnet d\'adresses joignables avec Riot.</string>
-    <string name="permissions_msg_contacts_warning_other_androids">Riot a besoin d\'accéder aux contacts de votre carnet d\'adresses pour trouver d\'autres utilisateurs de Matrix avec leur numéro de téléphone et leur adresse e-mail.
+Veuillez autoriser l\'accès dans la prochaine fenêtre contextuelle pour découvrir les utilisateurs du carnet d\'adresses joignables avec Wiresafe.</string>
+    <string name="permissions_msg_contacts_warning_other_androids">Wiresafe a besoin d\'accéder aux contacts de votre carnet d\'adresses pour trouver d\'autres utilisateurs de Matrix avec leur numéro de téléphone et leur adresse e-mail.
 
-Autorisez-vous Riot à accéder à vos contacts ?</string>
+Autorisez-vous Wiresafe à accéder à vos contacts ?</string>
 
     <string name="permissions_action_not_performed_missing_permissions">Désolé... L\'action n\'a pas été réalisée, faute d\'autorisations</string>
 
@@ -675,7 +675,7 @@ Les messages chiffrés ne seront pas visibles sur les clients qui n\'ont pas enc
     <string name="encryption_information_verify_device_warning2">Si elle correspond, appuyez sur le bouton Vérifier ci-dessous. Si ce n\'est pas le cas, quelqu\'un d\'autre intercepte cet appareil et vous devriez probablement le bloquer. À l\'avenir, ce processus de vérification sera plus évolué.</string>
     <string name="encryption_information_verify_key_match">Je confirme que les clés correspondent</string>
 
-    <string name="e2e_enabling_on_app_update">Riot prend désormais en charge le chiffrement de bout en bout, mais vous devez vous reconnecter pour l\'activer.
+    <string name="e2e_enabling_on_app_update">Wiresafe prend désormais en charge le chiffrement de bout en bout, mais vous devez vous reconnecter pour l\'activer.
 
 Vous pouvez le faire maintenant ou plus tard à partir des paramètres de l\'application.</string>
 
